k8s_config/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-svc
  namespace: packapp01
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 81
    targetPort: 8080
    protocol: TCP
  selector:
    app: customer
